--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -6,51 +6,60 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     app:cardBackgroundColor="@color/green"
-    app:cardCornerRadius="5dp"
+    app:cardCornerRadius="@dimen/general_radius_corners"
     app:cardElevation="3dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp">
+        android:layout_margin="5dp">
 
-        <!--text view for displaying our note text-->
         <TextView
-            android:id="@+id/idTVNote"
+            android:id="@+id/product_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
-            android:layout_toLeftOf="@id/idIVDelete"
+            android:layout_toStartOf="@id/button_delete"
             android:padding="4dp"
-            android:text="Note"
-            android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:text="@string/product_name"
+            android:textColor="@color/green_light"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
-        <!--text view for displaying our last updated text-->
         <TextView
-            android:id="@+id/idTVDate"
-            android:layout_width="match_parent"
+            android:id="@+id/text_date"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/idTVNote"
+            android:layout_below="@id/product_name"
+            android:layout_alignParentStart="true"
             android:layout_margin="3dp"
-            android:layout_toLeftOf="@id/idIVDelete"
             android:padding="4dp"
-            android:text="Updated At"
+            android:text="@string/expiration_date_hint"
             android:textColor="@color/white"
             android:textSize="13sp" />
 
-        <!--imageview for displaying delete icon-->
+        <TextView
+            android:id="@+id/expiration_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/product_name"
+            android:layout_margin="3dp"
+            android:layout_toStartOf="@id/button_delete"
+            android:layout_toEndOf="@id/text_date"
+            android:padding="4dp"
+            android:textColor="@color/white"
+            android:textSize="13sp" />
+
         <ImageView
-            android:id="@+id/idIVDelete"
+            android:id="@+id/button_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_margin="3dp"
             android:padding="3dp"
             android:src="@drawable/delete_24dp_fill0_wght400_grad0_opsz24"
-            app:tint="@color/white" />
+            app:tint="@color/green_dark" />
 
     </RelativeLayout>
 
