Add Show recipe

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -27,6 +27,11 @@
         android:id="@+id/navigation_profile"
         android:name="com.example.diet_application.ui.profile.ProfileFragment"
         android:label="@string/title_profile"
-        tools:layout="@layout/fragment_profile" />
+        tools:layout="@layout/fragment_profile" >
+        <argument
+            android:name="login"
+            app:argType="string"
+            app:nullable="true" />
+    </fragment>
 
 </navigation>
