--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -8,26 +8,24 @@
     android:background="?android:selectableItemBackground">
 
     <TextView
-        android:id="@+id/tvText"
+        android:id="@+id/product_title_in_cart"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginHorizontal="8dp"
         android:gravity="center_vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/cbSelect"
+        app:layout_constraintEnd_toStartOf="@+id/check_cart"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:textColor="@color/black"
         tools:text="ТЕКСТ" />
 
     <CheckBox
-        android:id="@+id/cbSelect"
+        android:id="@+id/check_cart"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
