--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,8 @@
         android:id="@+id/navigation_home"
         android:name="com.example.diet_application.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_cart"
@@ -28,10 +29,6 @@
         android:name="com.example.diet_application.ui.profile.ProfileFragment"
         android:label="@string/title_profile"
         tools:layout="@layout/fragment_profile" >
-        <argument
-            android:name="login"
-            app:argType="string"
-            app:nullable="true" />
     </fragment>
 
 </navigation>
